--- a/ubereats clone.html
+++ b/ubereats clone.html
@@ -142,7 +142,7 @@
     </div>
     <div class="margintb24">
     </div>
-    <p> <img src="images\ubereatmap.png" alt="" height="360" width="1439.2"> </p>
+    <p> <img src="images\ubereatmap.png" alt="" height="360" width="100%"> </p>
     <div class="height30"></div>
 
 
